--- a/tvr/Makefile
+++ b/tvr/Makefile
@@ -1,15 +1,15 @@
 # Build all setup files we use 
 
 EMACS=emacs
-BATCH = -batch -q -no-site-file    
-COMPILE =  -f batch-byte-compile
+BATCH = -batch -q -no-site-file     
+COMPILE = -f batch-byte-compile
 SETUP = emacs-startup.elc kbd-setup.elc  \
+helm-prepare.elc use-emms.elc \
 mspools-prepare.elc \
 sdcv-prepare.elc \
-sp-prepare.elc lispy-prepare.elc folding-prepare.elc \
+sp-prepare.elc lispy-prepare.elc  \
  vm-prepare.elc \
 gnus-gmail-no-xoauth.elc \
-laptop-local.elc \
 gnus-gmail-prepare.elc bbdb-prepare.elc \
 laptop-local.elc touchpad-disable.elc elfeed-prepare.elc \
  reftex-prepare.elc \
