--- a/tvr/Makefile
+++ b/tvr/Makefile
@@ -7,7 +7,7 @@ SETUP = emacs-startup.elc \
 sp-prepare.elc lispy-prepare.elc  \
 vm-prepare.elc gnus-gmail-prepare.elc  \
 laptop-local.elc touchpad-disable.elc   slime-prepare.elc   \
-org-prepare.elc jabber-prepare.elc 
+org-prepare.elc jabber-prepare.elc  all-prepare.elc 
 
 ALL= vm-prepare.el gnus-gmail-prepare.el jabber-prepare.el \
 sp-prepare.el lispy-prepare.el slime-prepare.el org-prepare.el
