--- a/tvr/Makefile
+++ b/tvr/Makefile
@@ -11,12 +11,15 @@ org-prepare.elc jabber-prepare.elc  all-prepare.elc
 
 ALL= vm-prepare.el gnus-gmail-prepare.el jabber-prepare.el \
 sp-prepare.el lispy-prepare.el slime-prepare.el org-prepare.el
+
 all: all-prepare.elc emacs-startup.elc
 
 all-prepare.el: $(ALL)
 	cat $(ALL) > all-prepare.el
 
 laptop-local.elc: laptop-local.el
+
+setup: $(SETUP)
 %.elc: %.el
 	$(EMACS) $(BATCH) -f package-initialize  $(COMPILE)  $<
 clean:
