--- a/tvr/Makefile
+++ b/tvr/Makefile
@@ -12,7 +12,7 @@ org-prepare.elc jabber-prepare.elc  all-prepare.elc
 ALL= vm-prepare.el gnus-gmail-prepare.el jabber-prepare.el \
 sp-prepare.el lispy-prepare.el slime-prepare.el org-prepare.el
 
-all: all-prepare.elc emacs-startup.elc
+all: all-prepare.elc emacs-startup.elc setup
 
 all-prepare.el: $(ALL)
 	cat $(ALL) > all-prepare.el
