setup: use eval-with-compile to advantage

--- a/js/node/package.json
+++ b/js/node/package.json
@@ -23,8 +23,8 @@
     },
     "homepage": "https://github.com/tvraman/emacspeak",
     "dependencies": {
-        "mathjax": ">= 3.0.0",
+        "mathjax": "^3.1.2",
         "net": ">=1.0.2",
-        "speech-rule-engine": ">= 3.0.1"
+        "speech-rule-engine": "^3.1.1"
     }
 }
