hand-built archive

--- a/blog-archive/Makefile
+++ b/blog-archive/Makefile
@@ -1,5 +1,5 @@
 articles.html: raw.xml
-	xsltproc ../xsl/atom-view.xsl raw.xml >articles.html
+	xsltproc ../xsl/atom-view.xsl full.xml >articles.html
 
 raw.xml:
 	wget -O raw.xml 'http://emacspeak.blogspot.com/feeds/posts/default?max-results=1000'
