--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -168,6 +168,7 @@ emacspeak-google.elc \
 emacspeak-gridtext.elc \
 emacspeak-gtags.elc \
 emacspeak-gud.elc \
+emacspeak-haskell.elc \
 emacspeak-helm.elc \
 emacspeak-hide.elc \
 emacspeak-hideshow.elc \
@@ -432,6 +433,7 @@ emacspeak-gomoku.elc: emacspeak-gomoku.el dtk-speak.elc voice-setup.elc
 emacspeak-gridtext.elc: emacspeak-gridtext.el dtk-speak.elc voice-setup.elc
 emacspeak-gtags.elc: emacspeak-gtags.el dtk-speak.elc voice-setup.elc
 emacspeak-gud.elc: emacspeak-gud.el dtk-speak.elc voice-setup.elc
+emacspeak-haskell.elc: emacspeak-haskell.el dtk-speak.elc
 emacspeak-helm.elc: emacspeak-helm.el dtk-speak.elc
 emacspeak-hide.elc: emacspeak-hide.el emacspeak-speak.elc
 emacspeak-hideshow.elc: emacspeak-hideshow.el dtk-speak.elc voice-setup.elc
