--- a/blog-archive/Makefile
+++ b/blog-archive/Makefile
@@ -3,9 +3,4 @@ articles.html: full.xml
 
 raw.xml:
 	wget -O raw.xml 'http://emacspeak.blogspot.com/feeds/posts/default?max-results=1000'
-
-articles.xml: raw.xml
-	xmllint raw.xml > articles.xml
-
-raw:
-	wget -O raw.xml 'http://emacspeak.blogspot.com/feeds/posts/default?max-results=1000'
+	xmlindent -i 2  -l 75 -w raw.xml 
