adding selectrum support

--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -246,6 +246,7 @@ sox.elc \
 soundscape.elc \
 sox-gen.elc \
 emacspeak-sdcv.elc \
+emacspeak-selectrum.elc \
 emacspeak-sql.elc \
 emacspeak-supercite.elc \
 emacspeak-sudoku.elc \
@@ -521,6 +522,7 @@ sox.elc: sox.el ladspa.elc
 soundscape.elc: soundscape.el
 sox-gen.elc: sox-gen.el sox.elc
 emacspeak-sdcv.elc: emacspeak-sdcv.el dtk-speak.elc voice-setup.elc
+emacspeak-selectrum.elc: emacspeak-selectrum.el dtk-speak.elc voice-setup.elc
 emacspeak-supercite.elc: emacspeak-supercite.el dtk-speak.elc voice-setup.elc
 emacspeak-sudoku.elc: emacspeak-sudoku.el dtk-speak.elc
 emacspeak-table-ui.elc: emacspeak-table-ui.el emacspeak-tabulate.elc  \
