refactoring, and moving acss-defstruct, retiring module acss-structure

--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -60,7 +60,7 @@ COMPILE =  -f batch-byte-compile
 # {{{  grouping files into dependent modules
 
 #The various modules:
-TTS_OBJECTS = acss-structure.elc \
+TTS_OBJECTS =  \
 dtk-interp.elc dtk-unicode.elc \
 dtk-speak.elc		dectalk-voices.elc\
 plain-voices.elc espeak-voices.elc \
@@ -340,13 +340,12 @@ custom: force
 dtk-interp.elc: dtk-interp.el
 dtk-unicode.elc: dtk-unicode.el
 dtk-speak.elc: dtk-speak.el  dtk-interp.elc dtk-unicode.elc 
-acss-structure.elc: acss-structure.el 
 dectalk-voices.elc: dectalk-voices.el voice-setup.elc 
 outloud-voices.elc: outloud-voices.el voice-setup.elc 
 plain-voices.elc: plain-voices.el voice-setup.elc 
 mac-voices.elc: mac-voices.el voice-setup.elc 
 espeak-voices.elc: espeak-voices.el voice-setup.elc 
-voice-setup.elc: voice-setup.el acss-structure.elc 
+voice-setup.elc: voice-setup.el 
 emacspeak-amark.elc: emacspeak-amark.el
 cd-tool.elc: cd-tool.el
 nm.elc: nm.el
