--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -70,6 +70,7 @@ SPEAK_OBJECTS =   \
 emacspeak-speak.elc  \
 emacspeak-actions.elc \
 voice-setup.elc \
+voice-defs.elc \
 emacspeak-pronounce.elc \
 emacspeak-sounds.elc
 
@@ -345,6 +346,7 @@ plain-voices.elc: plain-voices.el voice-setup.elc
 mac-voices.elc: mac-voices.el voice-setup.elc 
 espeak-voices.elc: espeak-voices.el voice-setup.elc 
 voice-setup.elc: voice-setup.el 
+voice-defs.elc: voice-defs.elc voice-setup.elc
 emacspeak-amark.elc: emacspeak-amark.el
 cd-tool.elc: cd-tool.el
 nm.elc: nm.el
