fixed make rule

--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -346,7 +346,7 @@ plain-voices.elc: plain-voices.el
 mac-voices.elc: mac-voices.el 
 espeak-voices.elc: espeak-voices.el 
 voice-setup.elc: voice-setup.el 
-voice-defs.elc: voice-defs.elc 
+voice-defs.elc: voice-defs.el  voice-setup.elc
 emacspeak-amark.elc: emacspeak-amark.el
 cd-tool.elc: cd-tool.el
 nm.elc: nm.el
