--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -66,28 +66,22 @@ outloud-voices.elc  mac-voices.elc
 
 SPEAK_OBJECTS =   \
 emacspeak-speak.elc  \
-emacspeak-actions.elc \
-voice-setup.elc \
-voice-defs.elc \
-emacspeak-pronounce.elc \
-emacspeak-sounds.elc
-
-CORE_OBJECTS =  \
 emacspeak.elc \
 emacspeak-setup.elc \
 emacspeak-preamble.elc \
 emacspeak-loaddefs.elc \
 emacspeak-advice.elc\
 emacspeak-keymap.elc\
-emacspeak-re-builder.elc \
-emacspeak-rg.elc \
-emacspeak-racer.elc \
-emacspeak-rust-mode.elc \
-emacspeak-table.elc \
-emacspeak-table-ui.elc \
-emacspeak-tabulate.elc \
+voice-setup.elc \
+voice-defs.elc \
+emacspeak-pronounce.elc \
+emacspeak-sounds.elc
+
+CORE_OBJECTS =  \
 amixer.elc \
+emacspeak-2048.elc \
 emacspeak-abc-mode.elc \
+emacspeak-actions.elc \
 emacspeak-add-log.elc \
 emacspeak-amark.elc \
 emacspeak-analog.elc \
@@ -104,50 +98,52 @@ emacspeak-browse-kill-ring.elc \
 emacspeak-bs.elc \
 emacspeak-buff-menu.elc \
 emacspeak-c.elc \
-emacspeak-comint.elc \
 emacspeak-calc.elc \
 emacspeak-calculator.elc \
 emacspeak-calendar.elc \
 emacspeak-chess.elc \
-emacspeak-ciel.elc \
 emacspeak-cider.elc \
+emacspeak-ciel.elc \
 emacspeak-clojure.elc \
 emacspeak-cmuscheme.elc \
-emacspeak-compile.elc \
+emacspeak-comint.elc \
 emacspeak-company.elc \
+emacspeak-compile.elc \
 emacspeak-cperl.elc \
 emacspeak-custom.elc \
 emacspeak-dbus.elc \
 emacspeak-deadgrep.elc \
 emacspeak-debugger.elc \
-emacspeak-dictionary.elc \
 emacspeak-desktop.elc \
+emacspeak-dictionary.elc \
 emacspeak-diff-mode.elc \
 emacspeak-dired.elc \
 emacspeak-dismal.elc \
 emacspeak-dumb-jump.elc \
-emacspeak-epub.elc \
 emacspeak-ecb.elc \
-emacspeak-ein.elc \
+emacspeak-eclim.elc \
 emacspeak-ediff.elc \
 emacspeak-eglot.elc \
-emacspeak-elisp-refs.elc \
-emacspeak-elscreen.elc \
-emacspeak-eww.elc \
-emacspeak-eclim.elc \
+emacspeak-ein.elc \
 emacspeak-elfeed.elc \
-emacspeak-enriched.elc \
-emacspeak-xkcd.elc \
+emacspeak-elisp-refs.elc \
+emacspeak-elpy.elc \
+emacspeak-elscreen.elc \
 emacspeak-emms.elc \
+emacspeak-enriched.elc \
 emacspeak-entertain.elc \
 emacspeak-epa.elc \
 emacspeak-eperiodic.elc \
+emacspeak-epub.elc \
 emacspeak-erc.elc \
 emacspeak-eshell.elc \
 emacspeak-ess.elc \
-emacspeak-evil.elc \
+emacspeak-etable.elc \
 emacspeak-eterm.elc \
 emacspeak-eudc.elc \
+emacspeak-evil.elc \
+emacspeak-eww.elc \
+emacspeak-extras.elc \
 emacspeak-feeds.elc \
 emacspeak-filtertext.elc \
 emacspeak-flycheck.elc \
@@ -168,122 +164,126 @@ emacspeak-gtags.elc \
 emacspeak-gud.elc \
 emacspeak-haskell.elc \
 emacspeak-helm.elc \
+emacspeak-hide-lines.elc  \
 emacspeak-hide.elc \
 emacspeak-hideshow.elc \
-emacspeak-hide-lines.elc  \
 emacspeak-hydra.elc \
 emacspeak-ibuffer.elc \
 emacspeak-ido.elc \
 emacspeak-iedit.elc \
-emacspeak-ivy.elc \
+emacspeak-indium.elc \
 emacspeak-info.elc\
 emacspeak-ispell.elc \
+emacspeak-ivy.elc \
 emacspeak-jabber.elc \
-emacspeak-indium.elc \
 emacspeak-jdee.elc \
 emacspeak-js2.elc \
 emacspeak-kmacro.elc  \
 emacspeak-librivox.elc \
 emacspeak-lispy.elc \
 emacspeak-lua.elc \
-emacspeak-magit.elc \
 emacspeak-m-player.elc \
+emacspeak-magit.elc \
 emacspeak-make-mode.elc \
-emacspeak-markdown.elc \
 emacspeak-man.elc \
+emacspeak-markdown.elc \
 emacspeak-maths.elc \
 emacspeak-message.elc \
 emacspeak-metapost.elc \
 emacspeak-midge.elc \
 emacspeak-mines.elc \
-emacspeak-muse.elc \
 emacspeak-mspools.elc \
+emacspeak-muse.elc \
 emacspeak-navi-mode.elc \
 emacspeak-net-utils.elc \
 emacspeak-newsticker.elc \
 emacspeak-nov.elc \
+emacspeak-nxml.elc \
 emacspeak-ocr.elc \
 emacspeak-org.elc \
 emacspeak-orgalist.elc \
 emacspeak-origami.elc \
-emacspeak-nxml.elc \
 emacspeak-outline.elc \
-emacspeak-popup.elc \
 emacspeak-package.elc \
 emacspeak-paradox.elc \
 emacspeak-perl.elc \
 emacspeak-pianobar.elc \
+emacspeak-popup.elc \
 emacspeak-proced.elc \
 emacspeak-project.elc \
 emacspeak-projectile.elc \
 emacspeak-py.elc \
-emacspeak-elpy.elc \
 emacspeak-pydoc.elc \
 emacspeak-python.elc \
+emacspeak-racer.elc \
 emacspeak-racket.elc \
 emacspeak-re-builder.elc \
+emacspeak-re-builder.elc \
 emacspeak-reftex.elc \
-emacspeak-rst.elc \
 emacspeak-related.elc \
-emacspeak-rpm-spec.elc \
+emacspeak-rg.elc \
 emacspeak-rmail.elc \
+emacspeak-rpm-spec.elc \
+emacspeak-rst.elc \
 emacspeak-ruby.elc \
+emacspeak-rust-mode.elc \
 emacspeak-sage.elc \
-emacspeak-slime.elc \
+emacspeak-sdcv.elc \
+emacspeak-selectrum.elc \
 emacspeak-ses.elc \
 emacspeak-setup.el \
 emacspeak-sgml-mode.elc \
-emacspeak-shx.elc \
 emacspeak-sh-script.elc \
-emacspeak-smartparens.elc \
+emacspeak-shx.elc \
+emacspeak-slime.elc \
 emacspeak-smart-window.elc \
+emacspeak-smartparens.elc \
 emacspeak-solitaire.elc \
 emacspeak-speedbar.elc \
-emacspeak-syslog.elc \
-ladspa.elc \
-sox.elc \
-soundscape.elc \
-sox-gen.elc \
-emacspeak-sdcv.elc \
-emacspeak-selectrum.elc \
 emacspeak-sql.elc \
-emacspeak-supercite.elc \
 emacspeak-sudoku.elc \
-emacspeak-etable.elc \
+emacspeak-supercite.elc \
+emacspeak-syslog.elc \
 emacspeak-tab-bar.elc \
+emacspeak-table-ui.elc \
+emacspeak-table.elc \
+emacspeak-tabulate.elc \
 emacspeak-tapestry.elc \
 emacspeak-tar.elc \
 emacspeak-tcl.elc \
 emacspeak-tempo.elc \
 emacspeak-tetris.elc \
+emacspeak-texinfo.elc \
 emacspeak-threes.elc \
 emacspeak-tide.elc \
-emacspeak-2048.elc \
-emacspeak-texinfo.elc \
-emacspeak-transient.elc \
 emacspeak-todo-mode.elc \
+emacspeak-transient.elc \
 emacspeak-twittering.elc \
 emacspeak-typo.elc \
 emacspeak-url-template.elc \
 emacspeak-vdiff.elc \
 emacspeak-view.elc \
+emacspeak-vm.elc \
 emacspeak-vterm.elc \
 emacspeak-vuiet.elc \
-emacspeak-vm.elc \
 emacspeak-wdired.elc \
 emacspeak-we.elc \
-emacspeak-webspace.elc \
 emacspeak-websearch.elc \
+emacspeak-webspace.elc \
 emacspeak-widget.elc \
 emacspeak-windmove.elc \
 emacspeak-winring.elc \
-emacspeak-woman.elc \
 emacspeak-wizards.elc  \
-emacspeak-extras.elc \
+emacspeak-woman.elc \
+emacspeak-xkcd.elc \
 emacspeak-xref.elc \
 emacspeak-xslt.elc \
 emacspeak-yaml.elc \
-emacspeak-yasnippet.elc
+emacspeak-yasnippet.elc \
+ladspa.elc \
+soundscape.elc \
+sox-gen.elc \
+sox.elc 
 
 ADDON_OBJECTS = \
 nm.elc tapestry.elc dom-addons.elc  \
