run make config if loaddefs.el is missing

--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -51,6 +51,8 @@ DEPS=-l $(SRC)/emacspeak-preamble.el -l $(SRC)/emacspeak-loaddefs.el
 
 COMPILE =  -f batch-byte-compile
 # How to compile
+
+emacspeak-loaddefs.el: config 
 %.elc:  %.el 
 	$(EMACS) $(BATCH)  $(DEPS)  $(COMPILE) $<
 
