--- a/tvr/Makefile
+++ b/tvr/Makefile
@@ -9,7 +9,7 @@ vm-prepare.elc gnus-gmail-prepare.elc  \
 laptop-local.elc touchpad-disable.elc   slime-prepare.elc   \
 org-prepare.elc jabber-prepare.elc  all-prepare.elc 
 
-ALL= vm-prepare.el gnus-gmail-prepare.el jabber-prepare.el eaf-prepare.el \
+ALL= vm-prepare.el gnus-gmail-prepare.el jabber-prepare.el  \
 sp-prepare.el lispy-prepare.el slime-prepare.el org-prepare.el
 
 all: all-prepare.elc emacs-startup.elc setup
