refactor: include dtk-interp.el in dtk-speak.el

--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -61,7 +61,7 @@ COMPILE =  -f batch-byte-compile
 TTS_OBJECTS =  \
 emacspeak-preamble.elc \
 emacspeak-loaddefs.elc \
-dtk-interp.elc dtk-unicode.elc \
+dtk-unicode.elc \
 dtk-speak.elc		dectalk-voices.elc\
 plain-voices.elc espeak-voices.elc \
 outloud-voices.elc  mac-voices.elc
