remove shr from  DEPS

--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -47,7 +47,7 @@ BATCH = -batch -q -no-site-file     \
 -f package-initialize \
 --eval '(setq file-name-handler-alist nil gc-cons-threshold 64000000 \
 load-source-file-function  nil)' 
-DEPS=-l shr -l $(SRC)/emacspeak-preamble.el -l $(SRC)/emacspeak-loaddefs.el 
+DEPS= -l $(SRC)/emacspeak-preamble.el -l $(SRC)/emacspeak-loaddefs.el 
 
 COMPILE =  -f batch-byte-compile
 # How to compile
