--- a/info/Makefile
+++ b/info/Makefile
@@ -62,6 +62,9 @@ pub:  html/index.html introducing-emacspeak.html
 clean: 
 	\rm *.info *.pdf || echo "all clean"
 
+codespell:
+	codespell -I .codespell *.texi
+
 spell:
 	@mv .spell.words .spell.tex
 	@cat ${FILES} | aspell --ignore-case -t --list --add-filter texinfo   \
