--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ servers/native-espeak/tclespeak.so
 /.ccls-cache/
 *.pdf
 **.pdf
+
+# ELPA-generated files
+/emacspeak-autoloads.el
+/emacspeak-pkg.el
+/lisp/emacspeak-autoloads.el
