adding more dirs to ignore in elpa build

--- a/.elpaignore
+++ b/.elpaignore
@@ -1,4 +1,17 @@
+README
+README.md
+announcements
+bash-utils
+blog-archive
 contrib
+etc
+git-hooks
+html
+nyxtalk
+run 
+runq 
+scapes 
+sounds/chimes
+sounds/classic 
+stumpwm
 tvr
-obsolete
-utils
