mplayer conf update

--- a/etc/mplayer.conf
+++ b/etc/mplayer.conf
@@ -1,11 +1,9 @@
-lirc=no
-ao=alsa
 vo=null
-volume=150
+lirc=no
 use-filedir-conf=1
 cache	        = 32
 #cache-min=50
 slave=1
 af=scaletempo,bs2b
-mixer-channel=master,1
+#mixer-channel=master,1
 volstep=10
