--- a/etc/mplayer.conf
+++ b/etc/mplayer.conf
@@ -1,8 +1,9 @@
+use-filedir-conf=1
 vo=null
 ao=pulse,alsa
 lirc=no
-volume=100
-use-filedir-conf=1
+#volume=100
+
 cache	        = 32
 #cache-min=50
 slave=1
