cleanup ogg chimes only for elpa

--- a/.elpaignore
+++ b/.elpaignore
@@ -9,16 +9,16 @@ etc/tweets
 git-hooks
 html
 nyxtalk
+nyxtalk
 run 
 runq 
 scapes 
 servers/android
 servers/chrome_tts_server
 sounds/3d
-nyxtalk
 sounds/chimes
-sounds/classic
 sounds/classic 
+sounds/pan-chimes
 sounds/system
 stumpwm
 tvr
