--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,4 @@ servers/native-espeak/tclespeak.so
 # ELPA-generated files
 /emacspeak-autoloads.el
 /emacspeak-pkg.el
- servers/dic
+ /servers/dic
