--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,4 @@ servers/native-espeak/tclespeak.so
 # ELPA-generated files
 /emacspeak-autoloads.el
 /emacspeak-pkg.el
- servers/dic
+ servers/dic/
