--- a/servers/software-dtk/Makefile
+++ b/servers/software-dtk/Makefile
@@ -3,7 +3,7 @@
 LABEL=1.1
 TCL_VERSION=8.6
 TCL_INCLUDE=/usr/include/tcl$(TCL_VERSION)
-CFLAGS+= -g    -O4 -fPIC  -DPIC  -pedantic -ansi -Wall  -Wno-long-long -I$(TCL_INCLUDE)
+CFLAGS+= -g    -O4 -fPIC  -DPIC -D__VXWORKS__ -pedantic -ansi -Wall  -Wno-long-long -I$(TCL_INCLUDE)
 LIBS=-ltcl$(TCL_VERSION) -ltts -ltts_us  -ldl
 tcldtk.so: tcldtk.o
 	$(CC) $(LDFLAGS) -shared -o $@ $< $(LIBS)
