--- a/servers/software-dtk/Makefile
+++ b/servers/software-dtk/Makefile
@@ -1,6 +1,6 @@
 #$Id$
 #
-LABEL=1.1
+CT=clang-tidy
 TCL_VERSION=8.6
 TCL_INCLUDE=/usr/include/tcl$(TCL_VERSION)
 CFLAGS+= -g    -O4 -fPIC  -DPIC  -pedantic -ansi -Wall  -Wno-long-long -I$(TCL_INCLUDE)
@@ -12,5 +12,4 @@ clean:
 	rm tcldtk.so tcldtk.o
 
 tidy:
-	clang-tidy -header-filter=.*-checks='*' -fix-errors tcldtk.c \
-	-- -std=c11 -I${TCL_INCLUDE}
+	$(CT) -header-filter=.*-checks='*'  tcldtk.c -- -std=c11 -I${TCL_INCLUDE}
