--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -292,7 +292,7 @@ sox.elc
 ADDON_OBJECTS = \
 emacspeak-nm.elc  dom-addons.elc light.elc  \
 xbacklight.elc  toy-braille.elc tetris.elc cd-tool.elc  \
-g-utils.elc gweb.elc gmaps.elc gm-nnir.elc 
+omaps.elc g-utils.elc gweb.elc gmaps.elc gm-nnir.elc 
 
 
 OBJECTS = $(TTS_OBJECTS) $(SPEAK_OBJECTS) $(CORE_OBJECTS)  $(ADDON_OBJECTS)
